--- a/menu.html
+++ b/menu.html
@@ -6,8 +6,8 @@
             <meta http-equiv='X-UA-Compatible' content='IE=edge'>
             <title> Menu </title>
            	<meta name='viewport' content='width=device-width, initial-scale=1'>
-			<link rel="stylesheet" href="asset/css/960.css">
-			<link rel="stylesheet" href="asset/css/style.css">
+			<link rel="stylesheet" type='text/css' media='screen' href="asset/css/960.css">
+			<link rel="stylesheet" type='text/css' media='screen' href="asset/css/style.css">
 		</head>
 		
 		<body>
